--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,8 @@
 version: '3'
-
 services:
   web:
-    stdin_open: true
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    ports: 
-      - 3000:3000
-    volumes:
-      - .:/usr/app
-      - /usr/app/node_modules
-  tests:
-    stdin_open: true
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - .:/usr/app
-      - /usr/app/node_modules
-    command: ["npm", "run", "test"]
+      dockerfile: Dockerfile
+    ports:
+      - '80:80'
